## 0.x.x / 2018-xx-xx

* [FEATURE] Add dummy implementation.
* [FEATURE] Add noglog Logger interface and internal implementation.